--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hoaxnews">
+    package="com.example.hoaxnews" >
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HoaxNews">
+        android:theme="@style/Theme.HoaxNews" >
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".admin.HasilCekActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.HasilLaporanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".user.CekFaktaActivity"
+            android:exported="false"
+            android:parentActivityName=".user.MainActivity" />
+        <activity
+            android:name=".user.LaporanActivity"
+            android:exported="false"
+            android:parentActivityName=".user.MainActivity" />
+        <activity
+            android:name=".user.MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
