--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hoaxnews" >
+    package="com.example.hoaxnews">
 
     <application
         android:allowBackup="true"
@@ -8,21 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HoaxNews" >
+        android:theme="@style/Theme.HoaxNews">
         <activity
-            android:name=".user.MainActivity"
+            android:name=".user.DetailCekActivity"
             android:exported="false" />
         <activity
-            android:name=".Form_RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Form_UserActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Form_AdminActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
+            android:name=".user.DetailLaporanActivity"
             android:exported="false" />
         <activity
             android:name=".admin.HasilCekActivity"
@@ -39,8 +30,8 @@
             android:exported="false"
             android:parentActivityName=".user.MainActivity" />
         <activity
-            android:name=".LogoActivity"
-            android:exported="true" >
+            android:name=".user.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
