firebase auth login/regist (selesai)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hoaxnews">
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -12,38 +11,55 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HoaxNews">
+
+
+        <activity android:name=".LogoActivity"
+             />
+
         <activity android:name=".user.MainActivity"
             android:exported="false" />
+
         <activity android:name=".Form_UserActivity"
             android:exported="false" />
+
         <activity android:name=".Form_AdminActivity"
             android:exported="false" />
+
+        <activity android:name=".LoginActivity"
+            android:exported="false" />
+
         <activity
             android:name=".user.EditProfileActivity"
             android:exported="false" />
+
         <activity
             android:name=".user.ProfileActivity"
             android:exported="false" />
+
         <activity
             android:name=".user.DetailCekActivity"
             android:exported="false" />
+
         <activity
             android:name=".user.DetailLaporanActivity"
             android:exported="false" />
+
         <activity
             android:name=".admin.HasilCekActivity"
             android:exported="false" />
+
         <activity
             android:name=".admin.HasilLaporanActivity"
             android:exported="false" />
+
         <activity
             android:name=".user.CekFaktaActivity"
-            android:exported="false"
-            android:parentActivityName=".user.MainActivity" />
+            android:exported="false" />
+
         <activity
             android:name=".user.LaporanActivity"
-            android:exported="false"
-            android:parentActivityName=".user.MainActivity" />
+            android:exported="false" />
+
         <activity
             android:name=".Form_RegisterActivity"
             android:exported="true">
@@ -53,6 +69,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
